# AIGCCore

./: .gitignore  .lighthouserc.json  .stylelintrc.cjs  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.codex/: verify.commands
.github/: CODEOWNERS
core/: Cargo.toml
core/corpus/incidents/: README.md
core/schemas/: execution-policy-v1.schema.json  execution-receipt-v1.schema.json
core/src/: lib.rs
core/src/audit/: event.rs  log.rs
core/src/determinism/: zip.rs
core/src/eval/: registry_v3.json  runner.rs
core/src/evidence_bundle/: authority.rs  builder.rs  mod.rs  schemas.rs
core/src/execution/: backend.rs  mod.rs  policy.rs  receipt.rs  validator.rs
core/src/financeos/: exceptions.rs
core/src/incidentos/: parser.rs  redaction.rs  render.rs
core/src/policy/: egress.rs
core/src/redlineos/: anchors.rs  extraction.rs  workflow.rs
core/src/run/: manager.rs
core/src/storage/: crypto.rs  key_management.rs
core/src/validator/: checklist_v3.json  mod.rs
core/tests/: evidence_authority.rs  evidenceos_pack.rs  future_pack_exports.rs  local_execution_contract.rs  redlineos_parity.rs
docs/: PORTFOLIO-DISPOSITION.md  command-surface.md  glib-migration-plan.md  glib-remediation-execution-2026-03-01.md  (+12 more)
src-tauri/: Cargo.toml  build.rs  build_provenance.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/local_execution/: fixture.js  mod.rs  socket-deny-seccomp.json
src-tauri/tests/: build_provenance.rs
(+60 files in other folders)
