[package]
name = "aigc_core"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[dependencies]
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
csv = "1.3.0"
hex = "0.4.3"
idna = "1.0.3"
rand = "0.8.5"
regex = "1.10"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.11.0"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "parsing"] }
ulid = "1.1.3"
url = "2.5.2"
walkdir = "2.5.0"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.12.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_System_Memory"
] }
