[package]
name = "aigc_core_tauri"
version = "0.1.0"
description = "AIGC Core desktop shell"
edition = "2021"
license = "UNLICENSED"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
aigc_core = { path = "../core" }
base64 = "0.22.1"
time = { version = "0.3.36", features = ["formatting"] }

[features]
default = []
